err.txt
file:///C:/Users/user/OneDrive/Desktop/mARI Platform/mARI Platform-Platform/whatsapp/supabaseAuthState.js:2
import { supabaseService } from '../src/lib/supabaseClient.js';
         ^^^^^^^^^^^^^^^
SyntaxError: The requested module '../src/lib/supabaseClient.js' does not provide an export named 'supabaseService'
    at #asyncInstantiate (node:internal/modules/esm/module_job:302:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:405:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.12.0
